--- a/style.css
+++ b/style.css
@@ -6,13 +6,632 @@
     text-decoration: none;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+
+/* Navigation */
+
+.max-width {
+    max-width: 1300px;
+    padding: 0 80px;
+    margin: auto;
+}
+
 .navbar {
     position: fixed;
     width: 100%;
-    background: #007AA3;
+    z-index: 999;
+    padding: 15px 0;
     font-family: 'Oswald', sans-serif;
+    transition: all 0.3s ease;
+}
+
+.navbar.sticky {
+    padding: 15px 0;
+    background: LightSeaGreen;
+}
+
+.navbar .max-width {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.navbar .logo a {
+    color: #fff;
+    font-family: 'Bebas Neue', cursive;
+    font-size: 38px;
+    font-weight: 600;
+    transition: all 0.3s ease;
+}
+
+.navbar .logo a span {
+    color: LightSeaGreen;
+}
+
+.navbar.sticky .logo a span {
+    color: #fff;
+}
+
+.navbar .menu li {
+    list-style: none;
+    display: inline-block;
 }
 
 .navbar .menu li a {
     color: #fff;
+    font-size: 20px;
+    font-weight: 500;
+    margin-left: 28px;
+    transition: color 0.3s ease;
+}
+
+.navbar .menu li a:hover {
+    color: LightSeaGreen;
+}
+
+.navbar.sticky .menu li a:hover {
+    color: #fff;
+}
+
+
+/* Menu button */
+
+.menu-btn {
+    color: #fff;
+    font-size: 23px;
+    cursor: pointer;
+    display: none;
+}
+
+.scroll-up-btn {
+    position: fixed;
+    height: 45px;
+    width: 42px;
+    background: LightSeaGreen;
+    right: 30px;
+    bottom: 10px;
+    text-align: center;
+    line-height: 45px;
+    color: #fff;
+    z-index: 9999;
+    font-size: 30px;
+    border-radius: 6px;
+    cursor: pointer;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.3s ease;
+}
+
+.scroll-up-btn.show {
+    bottom: 30px;
+    opacity: 1;
+    pointer-events: auto;
+}
+
+
+/* Home */
+
+.home {
+    display: flex;
+    height: 100vh;
+    background-image: url("/images/background.jpg");
+    color: #fff;
+    min-height: 500px;
+    font-family: 'Oswald', sans-serif;
+}
+
+.home .max-width {
+    margin: auto 0 auto 40px;
+}
+
+.home .home-content .text-1 {
+    font-size: 30px;
+}
+
+.home .home-content .text-2 {
+    font-size: 84px;
+    font-weight: 600;
+    margin-left: -3px;
+}
+
+.home .home-content .text-3 {
+    font-size: 48px;
+    margin: 5px 0;
+}
+
+.home .home-content .text-3 span {
+    color: LightSeaGreen;
+    font-weight: 500;
+}
+
+
+/* Wspólna zawartość na stronie */
+
+section {
+    padding: 100px 0;
+}
+
+.about,
+.services,
+.skills,
+.portfolio,
+.social,
+.contact,
+.footer {
+    font-family: 'Oswald', sans-serif;
+}
+
+.about .about-content,
+.services .serv-content,
+.skills .skills-content,
+.contact .contact-content {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
+section .title {
+    position: relative;
+    text-align: center;
+    font-size: 40px;
+    margin-bottom: 60px;
+    padding-bottom: 20px;
+    font-family: 'Bebas Neue', cursive;
+}
+
+section .title::before {
+    content: "";
+    position: absolute;
+    bottom: 0px;
+    left: 50%;
+    width: 180px;
+    height: 3px;
+    background: #111;
+    transform: translateX(-50%);
+}
+
+section .title::after {
+    position: absolute;
+    bottom: -16px;
+    left: 50%;
+    font-size: 20px;
+    color: LightSeaGreen;
+    padding: 5px;
+    background: #fff;
+    transform: translateX(-50%);
+}
+
+
+/* O mnie */
+
+.about .title::after {
+    content: "kim jestem";
+}
+
+.about .about-content {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.about .about-content .left {
+    width: 45%;
+}
+
+.about .about-content .left img {
+    height: 400px;
+    width: 400px;
+    object-fit: cover;
+}
+
+.about .about-content .right {
+    width: 45%;
+}
+
+.about .about-content .right .text {
+    font-size: 36px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.about .about-content .right .text span {
+    color: LightSeaGreen;
+}
+
+.about .about-content .right p {
+    text-align: justify;
+    font-size: 18px;
+}
+
+
+/* Usługi  */
+
+.services {
+    color: #fff;
+    background: #111;
+}
+
+.services .title::before {
+    background: #fff;
+}
+
+.services .title::after {
+    background: #111;
+    content: "co robię"
+}
+
+.services .serv-content {
+    text-align: center;
+}
+
+.services .serv-content .card {
+    display: inline-block;
+    width: calc(30% - 20px);
+    background: #222;
+    text-align: center;
+    border-radius: 6px;
+    padding: 20px 25px;
+    cursor: pointer;
+    margin: 0 25px;
+}
+
+.services .serv-content .card:hover {
+    background: LightSeaGreen;
+}
+
+.services .serv-content .card:hover i {
+    color: #fff;
+}
+
+.services .serv-content .card .box {
+    transition: all 0.3s ease;
+}
+
+.services .serv-content .card:hover .box {
+    transform: scale(1.05);
+}
+
+.services .serv-content .card i {
+    font-size: 50px;
+    color: LightSeaGreen;
+}
+
+.services .serv-content .card .text {
+    font-size: 25px;
+    font-weight: 500;
+    margin: 10px 0 7px 0;
+}
+
+
+/* Umiejętnności */
+
+.skills .title::after {
+    content: "co umiem";
+}
+
+.skills .skills-content .column {
+    width: calc(50% - 30px);
+    display: inline-block;
+    margin: 0 14px;
+}
+
+.skills .skills-content .left .text {
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.skills .skills-content .left p {
+    text-align: justify;
+}
+
+.skills .skills-content .right .bars {
+    margin-bottom: 15px;
+}
+
+.skills .skills-content .right .info {
+    display: flex;
+    margin-bottom: 5px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.skills .skills-content .right span {
+    font-weight: 500;
+    font-size: 18px;
+}
+
+.skills .skills-content .right .line {
+    height: 5px;
+    width: 100%;
+    background: lightgrey;
+    position: relative;
+}
+
+.skills .skills-content .right .line::before {
+    content: "";
+    position: absolute;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background: LightSeaGreen;
+}
+
+.skills-content .right .html::before {
+    width: 90%;
+}
+
+.skills-content .right .css::before {
+    width: 75%;
+}
+
+.skills-content .right .js::before {
+    width: 50%;
+}
+
+.skills-content .right .md::before {
+    width: 100%;
+}
+
+
+/* Portfolio */
+
+.portfolio {
+    color: #fff;
+    background: #111;
+}
+
+.portfolio .title::before {
+    background: #fff;
+}
+
+.portfolio .title::after {
+    background: #111;
+    content: "moje projekty"
+}
+
+
+/* Social Media */
+
+.social .title::after {
+    content: "znajdź mnie na";
+}
+
+.social .social-content .card {
+    color: #fff;
+    display: inline-block;
+    width: calc(30% - 20px);
+    background: #222;
+    text-align: center;
+    border-radius: 6px;
+    padding: 20px 25px;
+    cursor: pointer;
+    margin: 0 25px;
+}
+
+.social .social-content .card:hover {
+    background: LightSeaGreen;
+}
+
+.social .social-content .card:hover i {
+    color: #fff;
+}
+
+.social .social-content .card .box {
+    transition: all 0.3s ease;
+}
+
+.social .social-content .card:hover .box {
+    transform: scale(1.05);
+}
+
+.social .social-content .card i {
+    font-size: 50px;
+    color: LightSeaGreen;
+}
+
+.social .social-content .card .text {
+    color: #fff;
+    font-size: 25px;
+    font-weight: 500;
+    margin: 10px 0 7px 0;
+}
+
+
+/* Kontakt */
+
+.contact {
+    color: #fff;
+    background: #111;
+}
+
+.contact .title::before {
+    background: #fff;
+}
+
+.contact .title::after {
+    background: #111;
+    content: "napisz do mnie"
+}
+
+.contact .contact-content .text {
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.contact .contact-content p {
+    text-align: justify;
+}
+
+.contact .contact-content .icons {
+    margin: 10px 0;
+}
+
+.contact .contact-content .row {
+    display: flex;
+    height: 65px;
+    align-items: center;
+}
+
+.contact .contact-content .row .info {
+    margin-left: 30px;
+}
+
+.contact .contact-content .row i {
+    font-size: 25px;
+    color: LightSeaGreen;
+}
+
+.contact .contact-content .info .head {
+    font-weight: 500;
+}
+
+
+/* Footer */
+
+.footer {
+    text-align: center;
+    background: LightSeaGreen;
+    padding: 10px 23px;
+    color: #fff;
+}
+
+.footer span a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.footer span a:hover {
+    text-decoration: underline;
+}
+
+
+/* Responsive media query start */
+
+@media (max-width: 1300px) {
+    .home .max-width {
+        margin-left: 0px;
+    }
+}
+
+@media (max-width: 1104px) {
+    .home .max-width {
+        height: 350px;
+        width: 350px;
+    }
+}
+
+@media (max-width: 991px) {
+    .max-width {
+        padding: 0 50px;
+    }
+}
+
+@media (max-width: 947px) {
+    .max-width {
+        padding: 0 50px;
+    }
+    .menu-btn {
+        display: block;
+        z-index: 999;
+    }
+    .menu-btn i.active:before {
+        content: "\f00d";
+    }
+    .navbar .menu {
+        position: fixed;
+        height: 100vh;
+        width: 100%;
+        left: -100%;
+        top: 0;
+        background: #111;
+        text-align: center;
+        padding-top: 80px;
+    }
+    .navbar .menu.active {
+        left: 0;
+    }
+    .navbar .menu li {
+        display: block;
+    }
+    .navbar .menu li a {
+        display: inline-block;
+        margin: 20px 0;
+        font-size: 25px;
+    }
+    .home .home-content .text-2 {
+        font-size: 70px;
+    }
+    .home .home-content .text-3 {
+        font-size: 35px;
+    }
+    .max-width {
+        max-width: 800px;
+    }
+    .about .about-content .column {
+        width: 100%;
+    }
+    .about .about-content .left {
+        display: flex;
+        justify-content: center;
+        margin: 0 auto 60px;
+    }
+    .about .about-content .right {
+        flex: 100%;
+    }
+    .services .serv-content .card {
+        margin-bottom: 20px;
+        width: 100%;
+    }
+    .skills .skills-content .column {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+}
+
+@media (max-width: 690px) {
+    .max-width {
+        padding: 0 23px;
+    }
+    .home .home-content .text-2 {
+        font-size: 60px;
+    }
+    .home .home-content .text-3 {
+        font-size: 32px;
+    }
+    .services .serv-content .card {
+        width: calc(50% - 10px);
+        margin-bottom: 20px;
+    }
+    .skills .skills-content .column {
+        margin-bottom: 20px;
+        width: 100%;
+    }
+}
+
+@media (max-width: 500px) {
+    .home .home-content .text-2 {
+        font-size: 60px;
+    }
+    .home .home-content .text-3 {
+        font-size: 32px;
+    }
 }
